Related: tdf#77919 GetPosPixel() is relative to parent, not grandparent

so the tooltip rectangle is wrong and doesn't shown under mutter

we could use pCtrl->OutputToScreenPixel(Point(0, 0)) here too

Change-Id: I75a717127ad75a4aac2cb9c22e526419f798ea99